implement custom user details service and JWT authentication filter; update application properties for server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/audio_alchemists
 spring.datasource.username=postgres
 spring.datasource.password=PostgresSuperuserPassword123!@#
 spring.jpa.hibernate.ddl-auto=update
+server.port=8083
